unitx/UnitXParser.py
# Generated from UnitX.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class UnitXParser ( Parser ):

    grammarFileName = "UnitX.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'else'", u"'true'", u"'false'", u"'None'", 
                     u"'def'", u"'rep'", u"'print'", u"'if'", u"'return'", 
                     u"'break'", u"'continue'", u"'('", u"')'", u"'{'", 
                     u"'}'", u"'['", u"']'", u"';'", u"','", u"'.'", u"'---'", 
                     u"'----'", u"'-----'", u"'------'", u"'-------'", u"'--------'", 
                     u"'---------'", u"'----------'", u"'='", u"'>'", u"'<'", 
                     u"'!'", u"'~'", u"'?'", u"':'", u"'=='", u"'<='", u"'>='", 
                     u"'->'", u"'!='", u"'&&'", u"'||'", u"'++'", u"'--'", 
                     u"'+'", u"'-'", u"'*'", u"'/'", u"'&'", u"'|'", u"'^'", 
                     u"'%'", u"'+='", u"'-='", u"'*='", u"'/='", u"'&='", 
                     u"'|='", u"'^='", u"'%='", u"'@'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"DEF", u"REP", u"PRINT", u"IF", u"RETURN", 
                      u"BREAK", u"CONTINUE", u"LPAREN", u"RPAREN", u"LBRACE", 
                      u"RBRACE", u"LBRACK", u"RBRACK", u"SEMI", u"COMMA", 
                      u"DOT", u"THREE_BORDER", u"FOUR_BORDER", u"FIVE_BORDER", 
                      u"SIX_BORDER", u"SEVEN_BORDER", u"EIGHT_BORDER", u"NINE_BORDER", 
                      u"TEN_BORDER", u"ASSIGN", u"GT", u"LT", u"BANG", u"TILDE", 
                      u"QUESTION", u"COLON", u"EQUAL", u"LE", u"GE", u"ALLOW", 
                      u"NOTEQUAL", u"AND", u"OR", u"INC", u"DEC", u"ADD", 
                      u"SUB", u"MUL", u"DIV", u"BITAND", u"BITOR", u"CARET", 
                      u"MOD", u"ADD_ASSIGN", u"SUB_ASSIGN", u"MUL_ASSIGN", 
                      u"DIV_ASSIGN", u"AND_ASSIGN", u"OR_ASSIGN", u"XOR_ASSIGN", 
                      u"MOD_ASSIGN", u"AT", u"STRING_LITERAL", u"BYTES_LITERAL", 
                      u"DECIMAL_INTEGER", u"OCT_INTEGER", u"HEX_INTEGER", 
                      u"BIN_INTEGER", u"FLOAT_NUMBER", u"IMAG_NUMBER", u"Identifier", 
                      u"NEWLINE", u"WS", u"COMMENT", u"LINE_COMMENT", u"C_LINE_COMMENT" ]

    RULE_program = 0
    RULE_typeDeclaration = 1
    RULE_functionDeclaration = 2
    RULE_formalParameters = 3
    RULE_formalParameterList = 4
    RULE_formalParameter = 5
    RULE_block = 6
    RULE_blockStatement = 7
    RULE_statement = 8
    RULE_repStatement = 9
    RULE_ifStatement = 10
    RULE_expressionStatement = 11
    RULE_returnStatement = 12
    RULE_printStatement = 13
    RULE_dumpStatement = 14
    RULE_borderStatement = 15
    RULE_expressionList = 16
    RULE_parExpression = 17
    RULE_repControl = 18
    RULE_endRep = 19
    RULE_expression = 20
    RULE_unit = 21
    RULE_unitSingleOrPairOperator = 22
    RULE_unitOperator = 23
    RULE_primary = 24
    RULE_literal = 25
    RULE_string = 26
    RULE_number = 27
    RULE_integer = 28
    RULE_boolean = 29
    RULE_none = 30

    ruleNames =  [ u"program", u"typeDeclaration", u"functionDeclaration", 
                   u"formalParameters", u"formalParameterList", u"formalParameter", 
                   u"block", u"blockStatement", u"statement", u"repStatement", 
                   u"ifStatement", u"expressionStatement", u"returnStatement", 
                   u"printStatement", u"dumpStatement", u"borderStatement", 
                   u"expressionList", u"parExpression", u"repControl", u"endRep", 
                   u"expression", u"unit", u"unitSingleOrPairOperator", 
                   u"unitOperator", u"primary", u"literal", u"string", u"number", 
                   u"integer", u"boolean", u"none" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    DEF=5
    REP=6
    PRINT=7
    IF=8
    RETURN=9
    BREAK=10
    CONTINUE=11
    LPAREN=12
    RPAREN=13
    LBRACE=14
    RBRACE=15
    LBRACK=16
    RBRACK=17
    SEMI=18
    COMMA=19
    DOT=20
    THREE_BORDER=21
    FOUR_BORDER=22
    FIVE_BORDER=23
    SIX_BORDER=24
    SEVEN_BORDER=25
    EIGHT_BORDER=26
    NINE_BORDER=27
    TEN_BORDER=28
    ASSIGN=29
    GT=30
    LT=31
    BANG=32
    TILDE=33
    QUESTION=34
    COLON=35
    EQUAL=36
    LE=37
    GE=38
    ALLOW=39
    NOTEQUAL=40
    AND=41
    OR=42
    INC=43
    DEC=44
    ADD=45
    SUB=46
    MUL=47
    DIV=48
    BITAND=49
    BITOR=50
    CARET=51
    MOD=52
    ADD_ASSIGN=53
    SUB_ASSIGN=54
    MUL_ASSIGN=55
    DIV_ASSIGN=56
    AND_ASSIGN=57
    OR_ASSIGN=58
    XOR_ASSIGN=59
    MOD_ASSIGN=60
    AT=61
    STRING_LITERAL=62
    BYTES_LITERAL=63
    DECIMAL_INTEGER=64
    OCT_INTEGER=65
    HEX_INTEGER=66
    BIN_INTEGER=67
    FLOAT_NUMBER=68
    IMAG_NUMBER=69
    Identifier=70
    NEWLINE=71
    WS=72
    COMMENT=73
    LINE_COMMENT=74
    C_LINE_COMMENT=75

    def __init__(self, input):
        super(UnitXParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UnitXParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(UnitXParser.EOF, 0)

        def typeDeclaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(UnitXParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(UnitXParser.TypeDeclarationContext,i)


        def getRuleIndex(self):
            return UnitXParser.RULE_program

        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = UnitXParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << UnitXParser.T__1) | (1 << UnitXParser.T__2) | (1 << UnitXParser.T__3) | (1 << UnitXParser.DEF) | (1 << UnitXParser.REP) | (1 << UnitXParser.PRINT) | (1 << UnitXParser.IF) | (1 << UnitXParser.RETURN) | (1 << UnitXParser.BREAK) | (1 << UnitXParser.CONTINUE) | (1 << UnitXParser.LPAREN) | (1 << UnitXParser.LBRACE) | (1 << UnitXParser.LBRACK) | (1 << UnitXParser.THREE_BORDER) | (1 << UnitXParser.FOUR_BORDER) | (1 << UnitXParser.FIVE_BORDER) | (1 << UnitXParser.SIX_BORDER) | (1 << UnitXParser.SEVEN_BORDER) | (1 << UnitXParser.EIGHT_BORDER) | (1 << UnitXParser.NINE_BORDER) | (1 << UnitXParser.TEN_BORDER) | (1 << UnitXParser.GT) | (1 << UnitXParser.INC) | (1 << UnitXParser.DEC) | (1 << UnitXParser.STRING_LITERAL) | (1 << UnitXParser.BYTES_LITERAL))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (UnitXParser.DECIMAL_INTEGER - 64)) | (1 << (UnitXParser.OCT_INTEGER - 64)) | (1 << (UnitXParser.HEX_INTEGER - 64)) | (1 << (UnitXParser.BIN_INTEGER - 64)) | (1 << (UnitXParser.FLOAT_NUMBER - 64)) | (1 << (UnitXParser.IMAG_NUMBER - 64)) | (1 << (UnitXParser.Identifier - 64)))) != 0):
                self.state = 62
                self.typeDeclaration()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(UnitXParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UnitXParser.TypeDeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(UnitXParser.StatementContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(UnitXParser.FunctionDeclarationContext,0)


        def getRuleIndex(self):
            return UnitXParser.RULE_typeDeclaration

        def enterRule(self, listener):
            if hasattr(listener, "enterTypeDeclaration"):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTypeDeclaration"):
                listener.exitTypeDeclaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitTypeDeclaration"):
                return visitor.visitTypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeDeclaration(self):

        localctx = UnitXParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_typeDeclaration)
        try:
            self.state = 72
            token = self._input.LA(1)
            if token in [UnitXParser.T__1, UnitXParser.T__2, UnitXParser.T__3, UnitXParser.REP, UnitXParser.PRINT, UnitXParser.IF, UnitXParser.RETURN, UnitXParser.BREAK, UnitXParser.CONTINUE, UnitXParser.LPAREN, UnitXParser.LBRACE, UnitXParser.LBRACK, UnitXParser.THREE_BORDER, UnitXParser.FOUR_BORDER, UnitXParser.FIVE_BORDER, UnitXParser.SIX_BORDER, UnitXParser.SEVEN_BORDER, UnitXParser.EIGHT_BORDER, UnitXParser.NINE_BORDER, UnitXParser.TEN_BORDER, UnitXParser.GT, UnitXParser.INC, UnitXParser.DEC, UnitXParser.STRING_LITERAL, UnitXParser.BYTES_LITERAL, UnitXParser.DECIMAL_INTEGER, UnitXParser.OCT_INTEGER, UnitXParser.HEX_INTEGER, UnitXParser.BIN_INTEGER, UnitXParser.FLOAT_NUMBER, UnitXParser.IMAG_NUMBER, UnitXParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.statement()

            elif token in [UnitXParser.DEF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.functionDeclaration()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UnitXParser.FunctionDeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(UnitXParser.Identifier, 0)

        def formalParameters(self):
            return self.getTypedRuleContext(UnitXParser.FormalParametersContext,0)


        def block(self):
            return self.getTypedRuleContext(UnitXParser.BlockContext,0)


        def getRuleIndex(self):
            return UnitXParser.RULE_functionDeclaration

        def enterRule(self, listener):
            if hasattr(listener, "enterFunctionDeclaration"):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFunctionDeclaration"):
                listener.exitFunctionDeclaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitFunctionDeclaration"):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = UnitXParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(UnitXParser.DEF)
            self.state = 75
            self.match(UnitXParser.Identifier)
            self.state = 76
            self.formalParameters()
            self.state = 77
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParametersContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UnitXParser.FormalParametersContext, self).__init__(parent, invokingState)
            self.parser = parser

        def formalParameterList(self):
            return self.getTypedRuleContext(UnitXParser.FormalParameterListContext,0)


        def getRuleIndex(self):
            return UnitXParser.RULE_formalParameters

        def enterRule(self, listener):
            if hasattr(listener, "enterFormalParameters"):
                listener.enterFormalParameters(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFormalParameters"):
                listener.exitFormalParameters(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitFormalParameters"):
                return visitor.visitFormalParameters(self)
            else:
                return visitor.visitChildren(self)




    def formalParameters(self):

        localctx = UnitXParser.FormalParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formalParameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(UnitXParser.LPAREN)
            self.state = 81
            _la = self._input.LA(1)
            if _la==UnitXParser.Identifier:
                self.state = 80
                self.formalParameterList()


            self.state = 83
            self.match(UnitXParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UnitXParser.FormalParameterListContext, self).__init__(parent, invokingState)
            self.parser = parser

        def formalParameter(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(UnitXParser.FormalParameterContext)
            else:
                return self.getTypedRuleContext(UnitXParser.FormalParameterContext,i)


        def getRuleIndex(self):
            return UnitXParser.RULE_formalParameterList

        def enterRule(self, listener):
            if hasattr(listener, "enterFormalParameterList"):
                listener.enterFormalParameterList(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFormalParameterList"):
                listener.exitFormalParameterList(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitFormalParameterList"):
                return visitor.visitFormalParameterList(self)
            else:
                return visitor.visitChildren(self)




    def formalParameterList(self):

        localctx = UnitXParser.FormalParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_formalParameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.formalParameter()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==UnitXParser.COMMA:
                self.state = 86
                self.match(UnitXParser.COMMA)
                self.state = 87
                self.formalParameter()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParameterContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UnitXParser.FormalParameterContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(UnitXParser.Identifier, 0)

        def expression(self):
            return self.getTypedRuleContext(UnitXParser.ExpressionContext,0)


        def getRuleIndex(self):
            return UnitXParser.RULE_formalParameter

        def enterRule(self, listener):
            if hasattr(listener, "enterFormalParameter"):
                listener.enterFormalParameter(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFormalParameter"):
                listener.exitFormalParameter(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitFormalParameter"):
                return visitor.visitFormalParameter(self)
            else:
                return visitor.visitChildren(self)




    def formalParameter(self):

        localctx = UnitXParser.FormalParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formalParameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(UnitXParser.Identifier)
            self.state = 96
            _la = self._input.LA(1)
            if _la==UnitXParser.ASSIGN:
                self.state = 94
                self.match(UnitXParser.ASSIGN)
                self.state = 95
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UnitXParser.BlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def blockStatement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(UnitXParser.BlockStatementContext)
            else:
                return self.getTypedRuleContext(UnitXParser.BlockStatementContext,i)


        def getRuleIndex(self):
            return UnitXParser.RULE_block

        def enterRule(self, listener):
            if hasattr(listener, "enterBlock"):
                listener.enterBlock(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBlock"):
                listener.exitBlock(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBlock"):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):
